# n_back

./: .gitignore  CONTRIBUTING.md  DATA_DICTIONARY.md  LICENSE  MANIFEST.in  README.md  README_OLD.md  check_psychopy.py  environment.yml  instructions_break.txt  instructions_practice_feedback_pass.txt  instructions_save_and_exit.txt  instructions_task_headsup.txt  nback_task.py  pyproject.toml  requirements.txt
docs/: API.md  README.md  TROUBLESHOOTING.md
nback/: __init__.py  markers.py  sequences.py
scripts/: local_sequence_check.py  preview_seq.py  timing_diagnostics.py
texts/: informed_consent.txt  instructions_practice_feedback_fail.txt  instructions_practice_headsup.txt  instructions_welcome.txt
