

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n-back-task"
version = "1.0.0"
description = "Configurable PsychoPy N-back cognitive task with precise timing and optional marker outputs"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
authors = [ { name = "(Add maintainer name)" } ]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Psychology",
]
dependencies = [
  "psychopy==2025.1.1",
  "pylsl>=1.16.2",
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
nback-task = "nback_task:main"

[tool.setuptools]
packages = ["nback"]
include-package-data = true
py-modules = ["nback_task"]


